objects/Purchase_Order_Delta_Metadata__mdt.object
<CustomObject>
    <description>This is used to list the purchase order fields that have changed when comparing two po&apos;s.</description>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>The API name of the field. Don&apos;t forget the __c if it&apos;s a custom field.</description>
        <label>Field Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>The API name of the standard or custom object in Salesforce.</description>
        <label>Object Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderId__c</fullName>
        <description>This is the field or the relationship path to the PO Id. A master/detail or lookup will have a field named Purchase_Order__c on the object but something that&apos;s not directly related will need to have the relationship path noted (i.e. SomeObject__r.Purchase_Order__c).</description>
        <label>Purchase Order Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used as a flag in code to know if this object/field should be used or not. Gives us the ability to turn this field on/off without a deployment.</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Order Delta Metadata</label>
    <pluralLabel>Purchase Order Delta Metadata</pluralLabel>
</CustomObject>